Local DB working\nAdded Pouch factory

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    
+    <!-- pouch -->
+    <script src="scripts/pouchdb-5.2.0.min.js"></script>
   </head>
   <body ng-app="mytodoApp">
     <!--[if lte IE 8]>
