--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
@@ -14,57 +15,71 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    
+
+    <!--custom style-->
+    <link rel="stylesheet" href="styles/custom.css">
+
     <!-- pouch -->
     <script src="scripts/pouchdb-5.2.0.min.js"></script>
-  </head>
-  <body ng-app="mytodoApp">
+</head>
+
+<body ng-app="allsopAdminApp">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+        <div class="navbar navbar-default" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
 
-            <a class="navbar-brand" href="#/">mytodo</a>
-          </div>
+                    <a class="navbar-brand" href="#/">Allsop Admin</a>
+                </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+                <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-          </div>
+                    <ul class="nav navbar-nav">
+                        <!--<li class="active"><a href="#/">Home</a></li>-->
+                        <li><a ng-href="#/auctions">Auctions</a></li>
+                        <li><a ng-href="#/notify">Notify</a></li>
+                        <!--<li><a ng-href="#/about">About</a></li>-->
+                        <!--<li><a ng-href="#/">Contact</a></li>-->
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+        <div ng-view=""></div>
     </div>
 
-    <div class="footer">
+    <footer class="footer">
+        <div class="container">
+            <p>Made with <span class="glyphicon glyphicon-heart"></span> in Galway</p>
+        </div>
+    </footer>
+
+    <!--Sticky bootstrap footer-->
+    <!--<footer class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p class="text-muted">Place sticky footer content here.</p>
       </div>
-    </div>
+    </footer>-->
+
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
+    <script>
+        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
@@ -90,10 +105,14 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/auctions.js"></script>
+    <script src="scripts/services/pouchservice.js"></script>
+    <script src="scripts/controllers/notify.js"></script>
+    <!-- endbuild -->
 </body>
+
 </html>
