Auctions page get, delete and new entry working. Edit entry is left to do. Validation and styling is done throughout.

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/angularjs-datepicker/dist/angular-datepicker.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -19,6 +20,8 @@
     <!--custom style-->
     <link rel="stylesheet" href="styles/custom.css">
 
+    <!--angular css-->
+    <!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.2/angular.min.js">-->
     <!-- pouch -->
     <script src="scripts/pouchdb-5.2.0.min.js"></script>
 </head>
@@ -99,6 +102,8 @@
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/angular-ui-sortable/sortable.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/angularjs-datepicker/dist/angular-datepicker.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
