--- a/app/index.html
+++ b/app/index.html
@@ -15,15 +15,15 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/custom.css">
     <!-- endbuild -->
 
     <!--custom style-->
-    <link rel="stylesheet" href="styles/custom.css">
+    <!--<link rel="stylesheet" href="styles/custom.css">-->
 
     <!--angular css-->
     <!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.2/angular.min.js">-->
-    <!-- pouch -->
-    <script src="scripts/pouchdb-5.2.0.min.js"></script>
+
 </head>
 
 <body ng-app="allsop">
@@ -110,10 +110,9 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/auctions.js"></script>
     <script src="scripts/controllers/notify.js"></script>
-    <script src="scripts/services/auctionservice.js"></script>
+    <script src="scripts/pouchdb-5.2.0.min.js"></script>
     <!-- endbuild -->
 </body>
 
