--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,7 @@
     <script src="scripts/controllers/auctions.js"></script>
     <script src="scripts/controllers/notify.js"></script>
     <script src="scripts/pouchdb-5.2.0.min.js"></script>
+    <script src="scripts/services/auctionservice.js"></script>
     <!-- endbuild -->
 </body>
 
