--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Allsop Admin Portal</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -44,12 +44,12 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" href="#/">Allsop Admin</a>
+                    <a class="navbar-brand" href="#/home">Allsop Admin</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav" ng-hide="isLoggedOut">
                         <li><a ng-href="#/auctions">Auctions</a></li>
                         <li><a ng-href="#/notify">Notify</a></li>
                     </ul>
@@ -114,6 +114,10 @@
     <script src="scripts/controllers/notify.js"></script>
     <script src="scripts/pouchdb-5.2.0.min.js"></script>
     <script src="scripts/services/auctionservice.js"></script>
+    <script src="scripts/services/auth.js"></script>
+    <script src="scripts/controllers/home.js"></script>
+    <script src="scripts/controllers/login.js"></script>
+    <script src="scripts/services/loginservice.js"></script>
     <!-- endbuild -->
 </body>
 
