set up push notifications service and pouch db

--- a/app/index.html
+++ b/app/index.html
@@ -118,6 +118,7 @@
     <script src="scripts/controllers/home.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/services/loginservice.js"></script>
+    <script src="scripts/services/notifyservice.js"></script>
     <!-- endbuild -->
 </body>
 
