pulled messages into its own service and created a database for it

--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,7 @@
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/services/loginservice.js"></script>
     <script src="scripts/services/notifyservice.js"></script>
+    <script src="scripts/services/messageservice.js"></script>
     <!-- endbuild -->
 </body>
 
